[gd_scene load_steps=2 format=3 uid="uid://esw7j7or7gpd"]

[ext_resource type="Script" path="res://addons/ggs/classes/global/ggs.gd" id="1_6v3cu"]

[node name="GGS" type="Node"]
script = ExtResource("1_6v3cu")

[node name="MouseOverSFX" type="AudioStreamPlayer" parent="."]

[node name="FocusSFX" type="AudioStreamPlayer" parent="."]

[node name="InteractSFX" type="AudioStreamPlayer" parent="."]
